--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
